tests/kulezi_tests/good/simple_expression.lat
int main() {
    int x = 1;
    int y = 2;
    int z = x + y;
    printInt(x);
    printInt(y);
    printInt(z);
    return 0;
}